CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(LearnSfml)

SET(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(SFML 2.5 COMPONENTS graphics window system audio REQUIRED)
MESSAGE(STATUS "SFML_INCLUDE_DIR: ${SFML_INCLUDE_DIR}")

SET(ASSETS_DIR ${PROJECT_SOURCE_DIR})
SET(ASSETS
    ${ASSETS_DIR}/Davos.jpg
    ${ASSETS_DIR}/ChangaOne-Regular.ttf
    ${ASSETS_DIR}/sound.ogg
)
FILE(COPY ${ASSETS} DESTINATION .)


SET(LearnSfmlSources
    main.cpp
)

ADD_EXECUTABLE(LearnSfml ${LearnSfmlSources})

TARGET_LINK_LIBRARIES(LearnSfml LINK_PUBLIC
    sfml-graphics sfml-audio sfml-window sfml-system
)

## CPCK creates rpm and other bundles
set(CPACK_GENERATOR "RPM;TZ;ZIP;TBZ2;DEB")
set(CPACK_PACKAGE_NAME "LearnSfml")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Learn Sfml Demo")
set(CPACK_RPM_PACKAGE_DESCRIPTION "Learn Sfml Demo written by Richard Eigenmann")
set(CPACK_PACKAGE_RELEASE 1)
set(CPACK_PACKAGE_VERSION_MAJOR 1)
set(CPACK_PACKAGE_VERSION_MINOR 0)
set(CPACK_PACKAGE_VERSION_PATCH 0)
set(CPACK_PACKAGE_CONTACT "Richard Eigenmann")
set(CPACK_PACKAGE_VENDOR "Richard Eigenmann")
set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
SET(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/richardeigenmann/LearnSfml")
set(CPACK_PACKAGE_CHECKSUM "MD5")
SET(CPACK_RPM_PACKAGE_REQUIRES "libsfml2-2_5 Mesa")
SET(CPACK_RPM_INSTALL_WITH_EXEC ON)
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libsfml-audio2.5,libsfml-graphics2.5,libsfml-network2.5,libsfml-system2.5,libsfml-window2.5")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
install(TARGETS LearnSfml
  RUNTIME
  DESTINATION "bin")
install(FILES ${ASSETS} DESTINATION "bin")
include(CPack)